force-app/main/default/objects/custom_create243__c/custom_create243__c.object-meta.xml
<CustomObject>
    <label>Custom created object243</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects243</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>