force-app/main/default/objects/custom_create243__c/fields/custom_create_243field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_243field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 243field541</label>
    <type>Checkbox</type>
</CustomField>